# skripshit

./: 02. periapical-effdet-d4.ipynb  README.md  app.py  pyproject.toml  requirements.txt  test.py
datasets/periapicalv2/annotations/: instances_test.json  instances_train.json  instances_val.json
models/: backbone.py
models/efficientdet/: model.py
models/utils/: utils.py
templates/: about.html  detection.html  index.html  result.html
utils/: effdet_utils.py
